tests/semantic/comp_name_resolution/comp_name_resolution.err
Error: Invalid number of type parameters for component A in file comp_name_resolution.dl at line 14
    .comp BC : A<symbol> {}         // not ok
----^-----------------------------------------
Error: Invalid number of type parameters for component B in file comp_name_resolution.dl at line 28
    .init X = B
----^-----------
Error: Invalid number of type parameters for component B in file comp_name_resolution.dl at line 29
    .init X = B<N,N>
----^----------------
Error: Referencing undefined component BB in file comp_name_resolution.dl at line 30
    .init X = BB
----^------------
Error: Invalid cycle in inheritance for component D in file comp_name_resolution.dl at line 35
.comp D<M> : C<M,M>, B<M,M>, D, M {
^-----------------------------------
Error: Invalid number of type parameters for component B in file comp_name_resolution.dl at line 35
.comp D<M> : C<M,M>, B<M,M>, D, M {
^-----------------------------------
Error: Invalid number of type parameters for component D in file comp_name_resolution.dl at line 35
.comp D<M> : C<M,M>, B<M,M>, D, M {
^-----------------------------------
Error: Invalid cycle in inheritance for component E in file comp_name_resolution.dl at line 40
.comp E : E {
^-------------
Error: Invalid cycle in inheritance for component F in file comp_name_resolution.dl at line 45
.comp F : G { }
^---------------
Error: Invalid cycle in inheritance for component G in file comp_name_resolution.dl at line 46
.comp G : F { }
^---------------
Error: Invalid number of type parameters for component B in file comp_name_resolution.dl at line 53
.init Y = B
^-----------
Error: Invalid number of type parameters for component B in file comp_name_resolution.dl at line 59
.init W = B<symbol,symbol>
^--------------------------
Error: Referencing undefined component M in file comp_name_resolution.dl at line 62
.init U = M
^-----------
13 errors generated, evaluation aborted
